===Changelog for NEI LOTR===
Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'

 #2.0.0-ALPHA:
 + Updated to NEIRecipeHandlers-1.0.0-BETA
 + Updated to v35.3 of the LOTR Mod
  + Added a trader recipe handler for the Wicked  Dwarf
  + Added the new technical blocks to the item hiding list
 + Added a button which shows all recipes of a handler to the handler and device GUIs ("transfer rect")

 #1.0.0-ALPHA:
  + Defined a public API
  + Updated to NEIRecipeHandlers-2.0.2-ALPHA
  + Updated to v34.3 of the LOTR Mod
 
  * Fixed that the trader recipe handler for the "Umbar Stonemason" was registered twice
  * Fixed that the LOTR coin count indicator was rendered for recipe handlers

 #0.7.0-ALPHA:
  + Updated to v34 of the LOTR Mod
   + Added support for the Gulf of Harad and Umbar Crafting Tables
   + Added the new technical blocks to the item hiding list
   + Added support for all new traders

 #0.6.0-ALPHA:
  + Updated to NEIRecipeHandlers-2.0.1-ALPHA

 #0.5.3-ALPHA:
  + The sourcecode of the plugin now available at: https://github.com/CraftedMods/nei-lotr
  + Added a cauldron recipe handler which supports undyening and unpoisoning recipes
  + Added localization support for recipe handlers
  
  * Restructured some internal things

 #0.5.2-ALPHA:
  * Fixed some compatibility issues with CraftTweaker

 #0.5.1-ALPHA:
  + Added NEI overlay handler support for:
   1. Vanilla Crafting Table
   2. Middle-earth Crafting Tables
   3. Barrel
  + Added config options to disable all recipe handlers in a category
    
  * Fixed an exception thrown by the unsmeltery recipe handler on joining servers
  * Fixed that the version checker didn't show notifications about new versions if the player joined a server
  * The unsmeltery recipe handler now caches some recipes
  * Disabling the NEI integration now disables the execution of most tasks executed on startup
  * Some recipe handlers now show more accurate results regarding item damage and NBT tags
  * Updated mcmod.info
