@@ -7,6 +7,8 @@ Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'
   + Added a trader recipe handler for the Wicked  Dwarf
   + Added the new technical blocks to the item hiding list
  + Added a button which shows all recipes of a handler to the handler and device GUIs ("transfer rect")
+ 
+ * Fixed wrong recipes with the cauldron recipe handler and Hobbit Pipes with magic smoke
 
  #1.0.0-ALPHA:
   + Defined a public API
